--- a/activar/activar.html
+++ b/activar/activar.html
@@ -49,7 +49,7 @@
             <p id="saveCommand">save</p>
         </div>
         <div class="footer">
-            <p>Realizado por: Ing. J Salcedo M.</p>
+            <p>Realizado por: J.Salcedo</p>
         </div>
     </div>
     <script src="script.js"></script>
