--- a/eliminar/eliminar.html
+++ b/eliminar/eliminar.html
@@ -37,7 +37,7 @@
         </div>
 
         <footer>
-            <p>Realizado por: Ing. J Salcedo M.</p>
+            <p>Realizado por: J.Salcedo</p>
         </footer>
     </div>
 <a href="../index.html" class="back-link">Volver a la página principal</a>
