--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>SAMATEL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,6 +28,7 @@
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         .button-activate {
             background-color: #007BFF;
@@ -41,13 +42,36 @@
         .button-delete:hover {
             background-color: #CC0000;
         }
+        .button-manage {
+            background-color: #28a745;
+        }
+        .button-manage:hover {
+            background-color: #1e7e34;
+        }
+      
+      .footer {
+    text-align: right;
+    margin: 20px;
+    font-size: 14px;
+    color: #555;
+    font-style: italic;
+}
     </style>
 </head>
 <body>
-    <h1>Gestión de ONTs</h1>
+    <h1>Administración de ONT</h1>
     <div class="button-container">
-        <a href="activar/activar.html" class="button button-activate">Activar ONT</a>
+        <a href="activar/activar.html" class="button button-activate">Activar Nueva ONT</a>
         <a href="eliminar/eliminar.html" class="button button-delete">Eliminar ONT</a>
+        <a href="gestionar/gestionar.html" class="button button-manage">Gestionar ONT</a>
     </div>
-</body>
+
+  <p>
+  <div class="footer">
+   Elaborado por: J. Salcedo
+  </div>
+  
+  </body>
 </html>
+
+
